--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="section">
       <div class="content-container">
         <p>Section 1 Content</p>
-        <button href="https://www.altmann-real-estate.webflow.io/property-name"></button>
+        <button id="link_main_page" href="https://www.altmann-real-estate.webflow.io/property-name"></button>
       </div>
     </div>
     <div class="section">
