--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="section">
       <div class="content-container">
         <p>Section 1 Content</p>
-        <a href="https://www.altmann-real-estate.webflow.io/property-name"><button id="link_main_page">Back To Main Page</button></a>
+        <a href="altmann-real-estate.webflow.io/property-name"><button id="link_main_page">Back To Main Page</button></a>
       </div>
     </div>
     <div class="section">
