--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
   <div class="container-fluid">
     <div class="section">
-      <div class="content-container">
+      <div class="content-container" id="button_box">
         <a href="altmann-real-estate.webflow.io/property-name"><button id="link_main_page">Back To Main Page</button></a>
       </div>
     </div>
@@ -32,11 +32,6 @@
     <script src='https://cdn.jotfor.ms/s/umd/latest/for-form-embed-handler.js'></script>
     <script>window.jotformEmbedHandler("iframe[id='JotFormIFrame-241571569159365']", "https://form.jotform.com/")</script>
     
-      </div>
-    </div>
-    <div class="section">
-      <div class="content-container">
-        <p>Section 3 Content</p>
       </div>
     </div>
   </div>
