--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Real Estate Upload</title>
   <!-- Bootstrap CSS -->
   <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
-  <link rel="stylesheet" type="text/css" href="style.css">
+  <link rel="stylesheet" type="text/css" href="https://julius-altmann-3333.github.io/upload_form/style.css">
 </head>
 <body>
   <div class="container-fluid">
